--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "CKEditor directive for Angular.",
   "main": "angular-ckeditor.js",
   "scripts": {
-    "install": "bower install",
-    "test": "./node_modules/karma/bin/karma start --single-run"
+    "test": "karma start --single-run"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/lemonde/angular-ckeditor.git"
+    "url": "git://github.com/IPSystems/angular-ckeditor.git"
   },
   "keywords": [
     "angular",
@@ -19,19 +18,26 @@
   "author": "Team Le8 <projet-cms-tech@lemonde.fr>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lemonde/angular-ckeditor/issues"
+    "url": "https://github.com/IPSystems/angular-ckeditor/issues"
   },
-  "homepage": "https://github.com/lemonde/angular-ckeditor",
+  "homepage": "https://github.com/IPSystems/angular-ckeditor",
+  "dependencies": {
+    "angular": "~1.3.20"
+  },
   "devDependencies": {
+    "angular-mocks": "~1.3.20",
     "bower": "~1.7.2",
     "chai": "~3.4.1",
     "chai-jquery": "~2.0.0",
+    "ckeditor": "~4.5.11",
     "grunt": "~0.4.4",
     "grunt-contrib-uglify": "~0.11.0",
+    "jquery": "~2.1.4",
     "karma": "~0.13.18",
     "karma-chrome-launcher": "~0.2.2",
     "karma-firefox-launcher": "~0.1.7",
     "karma-mocha": "~0.2.1",
+    "lodash": "~3.10.1",
     "mocha": "~2.3.4",
     "sinon": "~1.17.2",
     "sinon-chai": "~2.8",
